to address sonarcube issue